deploy/k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gekaixing
spec:
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
